--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.2",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -31,6 +33,7 @@
     "@angular/cli": "^18.2.6",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/toastr": "^2.1.43",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
